# input

./: .gitignore  Base.h  CMakeLists.txt  KeyCodes.h  Log.h  MouseCodes.h  inherit.h  object.h  ref_ptr.h  singleton.h  spy_ptr.h
Base/: CMakeLists.txt  platform.h  ref_ptr.h
inc/Events/: KeyEvents.h  MouseEvents.h
inc/Input/: KeyCodes.h  MouseCodes.h
src/: Base.h  inherit  object  observer_ptr  platform  ref_ptr
test/: CMakeLists.txt  test_Base.cpp
